<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsTopLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:textSize="20dp"
        android:text="@string/settings_power_title" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <CheckBox
                android:id="@+id/setShakeOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_shake_title"/>
        </TableRow>

        <TableRow>
            <CheckBox
                android:id="@+id/setTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/set_temperature_title"/>
            <NumberPicker
                android:id="@+id/setTemperatureMax"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:text="@string/set_temperature_m" />
        </TableRow>

        <TableRow>
            <CheckBox
                android:id="@+id/setHeater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/set_heater_title"/>
            <NumberPicker
                android:id="@+id/setHeaterMin"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:text="@string/set_heater_m" />
        </TableRow>

        <TableRow>
            <CheckBox
                android:id="@+id/setBattery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/set_battery_title"/>
            <NumberPicker
                android:id="@+id/setBatteryMin"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:text="@string/set_battery_m" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnSetExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/action_back" />

</LinearLayout>
